# cmake-build-system

./: .gitignore  CMakeLists.txt  README.md
example/example-project/cmake/: Pack.cmake
example/example-project/sandbox/: CMakeLists.txt
example/example-project/sources/example-project/module1/: CMakeLists.txt
examples/example-project/: CMakeLists.txt
examples/example-project/cmake/: Libraries.cmake
examples/example-project/sources/example-project/module1/: CMakeLists.txt
examples/example-project/tests/: CMakeLists.txt
modules/: CmakeBuildSystem.cmake  FindCmakeBuildSystem.cmake
sources/: CMakeBuildSystem.cmake  Definitions.cmake  Functions.cmake  ModuleSystem.cmake  Pack.cmake
sources/modules/: FindCMakeBuildSystem.cmake
templates/: cmake-build-system-config.cmake.in  cmake-build-systemConfig.cmake.in
